--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -11,20 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Cache node modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          # A list of files, directories, and wildcard patterns to cache and restore
-          path: |
-            ~/.npm
-            ~/.cache/Cypress
-          # An explicit key for restoring and saving the cache
-          key: ${{runner.os}}-build-${{env.cache-name}}-${{hashFiles('**/package-lock.json')}}
-          # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
-          restore-keys: | # Optional
-            ${{runner.os}}-build-${{env.cache-name}}-
+          node-version: 16
+          cache: 'npm'
       - name: Install dependencies
         run: |
             cd ${{env.PROJECT_ROOT}}
